# ai-engineering

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml
apps/api/: pyproject.toml
apps/api/src/api/: app.py
apps/api/src/api/agents/: retrieval_generation.py
apps/api/src/api/api/: endpoints.py  middleware.py  models.py
apps/chatbot_ui/: pyproject.toml
apps/chatbot_ui/src/chatbot_ui/: app.py
notebooks/prerequisites/: 01-llm-apis.ipynb
notebooks/week_1/: 01-explore-amazon-dataset.ipynb  02-RAG-preprocessing-Amazon.ipynb  03-RAG-pipeline.ipynb
src/: __init__.py  app.py
