[project]
name = "my-codes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.6"
dependencies = [
    "google-genai>=1.47.0",
    "groq>=1.0.0",
    "ipykernel>=6.31.0",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.50.0",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/chatbot_ui",
]
