[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali Mohammadi", email = "alimohammadi02321@gmail.com" }
]
requires-python = ">=3.9.6"
dependencies = [
    "fastapi>=0.128.8",
    "google-genai>=1.47.0",
    "groq>=1.0.0",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.39.0",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"


[tool.uv.sources]
shared = { workspace = true }


[tool.hatch.build.targets.sdist]
include=[
    "src/",
    "tests/",
    "README.md"
]
