[project]
name = "chatbot-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali Mohammadi", email = "alimohammadi02321@gmail.com" }
]
requires-python = ">=3.9.6"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "streamlit>=1.50.0",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages=["src/api"]

[tool.hatch.build.targets.sdist]
include=[
    "src/",
    "tests/",
    "README.md"
]
